# adventofcode-2025

./: .gitignore  Cargo.toml  README.md  aoc  build.sh  dune  dune-project  leaderboard.sh  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: CI.yaml  leaderboard.yml  lint.yaml
day-01/input/: thuiop.txt
day-01/part-1/: div.rs  enizor.rs  paullgdc.ml  th-ch.py  thuiop.zig  youyoun.py
day-01/part-2/: div.rs  enizor.rs  paullgdc.ml  th-ch.py  thuiop.zig  youyoun.py
day-02/part-1/: div.rs  enizor.rs  th-ch.py  thuiop.zig
day-02/part-2/: div.rs  enizor.rs  th-ch.py  thuiop.zig
day-03/part-1/: div.rs  enizor.rs  th-ch.py  thuiop.zig  vanyle.nim
day-03/part-2/: div.rs  enizor.rs  th-ch.py  thuiop.zig  vanyle.nim
day-04/part-1/: div.rs  enizor.rs  th-ch.py  thuiop.zig
day-04/part-2/: div.rs  enizor.rs  th-ch.py  thuiop.zig
day-05/part-1/: div.rs  enizor.rs  th-ch.py  thuiop.zig
day-05/part-2/: div.rs  enizor.rs  th-ch.py  thuiop.zig
day-06/part-1/: enizor.rs  th-ch.py  thuiop.zig
day-06/part-2/: enizor.rs  th-ch.py  thuiop.zig
day-07/part-1/: enizor.rs  th-ch.py  thuiop.zig
day-07/part-2/: enizor.rs  th-ch.py  thuiop.zig
day-08/part-1/: enizor.rs  th-ch.py  thuiop.zig
day-08/part-2/: enizor.rs  th-ch.py  thuiop.zig
day-09/part-1/: enizor.rs  th-ch.py  thuiop.zig
day-09/part-2/: th-ch.py
day-10/part-1/: th-ch.py
day-10/part-2/: th-ch.py
day-11/part-1/: th-ch.py
day-11/part-2/: th-ch.py
day-12/part-1/: th-ch.py
dune.lock/: lock.dune  ocaml-compiler.pkg
lib/rust/: lib.rs
lib/rust/enizor/: bitset.rs  grid.rs  mod.rs  parser.rs  utils.rs
tool/: AOC.py  create.py  run.py
tool/leaderboard/: leaderboard_template.html
tool/runners/: __init__.py  cpp.py  ml.py
tool/templates/: template.js  template.ml  template.nim  template.ts  template.zig
