[package]
name = "adventofcode-2025"
version = "0.1.0"
authors = []
rust-version = "1.86"
edition = "2024"

[dependencies]

[lib]
name = "aoc"
path = "./lib/rust/lib.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"
