[package]
name = "adventofcode-2025"
version = "0.1.0"
authors = []
rust-version = "1.86"
edition = "2024"

[dependencies]

[lib]
name = "aoc"
path = "./lib/rust/lib.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"

[[bin]]
name = "day-03-part-1-enizor"
path = "./day-03/part-1/enizor.rs"

[[bin]]
name = "day-03-part-2-enizor"
path = "./day-03/part-2/enizor.rs"

[[bin]]
name = "day-04-part-1-enizor"
path = "./day-04/part-1/enizor.rs"

[[bin]]
name = "day-04-part-2-enizor"
path = "./day-04/part-2/enizor.rs"

[[bin]]
name = "day-05-part-1-enizor"
path = "./day-05/part-1/enizor.rs"

[[bin]]
name = "day-05-part-2-enizor"
path = "./day-05/part-2/enizor.rs"

[[bin]]
name = "day-01-part-1-div"
path = "./day-01/part-1/div.rs"

[[bin]]
name = "day-01-part-2-div"
path = "./day-01/part-2/div.rs"

[[bin]]
name = "day-02-part-1-div"
path = "./day-02/part-1/div.rs"

[[bin]]
name = "day-02-part-2-div"
path = "./day-02/part-2/div.rs"

[[bin]]
name = "day-03-part-1-div"
path = "./day-03/part-1/div.rs"

[[bin]]
name = "day-03-part-2-div"
path = "./day-03/part-2/div.rs"

[[bin]]
name = "day-04-part-1-div"
path = "./day-04/part-1/div.rs"

[[bin]]
name = "day-04-part-2-div"
path = "./day-04/part-2/div.rs"

[[bin]]
name = "day-05-part-1-div"
path = "./day-05/part-1/div.rs"

[[bin]]
name = "day-05-part-2-div"
path = "./day-05/part-2/div.rs"

[[bin]]
name = "day-06-part-1-enizor"
path = "./day-06/part-1/enizor.rs"

[[bin]]
name = "day-06-part-2-enizor"
path = "./day-06/part-2/enizor.rs"
