[project]
name = "adventofcode-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Cython>=0.29.32",
    "numpy>=1.23.5,<2",
    "pytest==7.4.3",
    "tabulate>=0.9.0,<1",
    "Jinja2>=3.1.2",
    "sympy==1.12",
    "networkx==3.4.2",
    "pathos==0.3.3",
]
