[project]
name = "adventofcode-2025"
version = "0.1.0"
description = "Advent of code 2025 solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Cython>=0.29.32",
    "numpy>=1.23.5,<2",
    "pytest==7.4.3",
    "tabulate>=0.9.0,<1",
    "Jinja2>=3.1.2",
    "sympy==1.12",
    "networkx==3.4.2",
    "pathos==0.3.3",
    "shapely>=2.1.2",
    "scipy>=1.16.3",
]

[project.scripts]
aoc = "tool.AOC:AOC"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tool"
module-root = ""
